# gate-lock-gate-node

./: CMakeLists.txt  sdkconfig  sdkconfig.old
components/gate-system-common/: CMakeLists.txt  system_context.c  system_context.h
components/linear-actuator-lock/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  linear_actuator.c  linear_actuator.h
components/servo-lock/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  lock_control.c  lock_control.h
components/softap-service/: CMakeLists.txt  Kconfig.projbuild  Readme.txt  softap_event_adapter.c  softap_event_adapter.h  softap_service.c  softap_service.h
main/: CMakeLists.txt  exception_handler.c  exception_handler.h  gate-node.c  routine_event_handler.c  routine_event_handler.h
